Replaced algo_polygon() with GD library implementation.

--- a/README.html
+++ b/README.html
@@ -410,6 +410,11 @@ data/</pre>
   For tinyxml library.
   <a href="http://www.sourceforge.net/projects/tinyxml">http://www.sourceforge.net/projects/tinyxml</a>
 </div>
+<div class="author">Matthieu Haller and Kirsten Schulz</div>
+<div class="details">
+  For filled polygon algorithm of GD library.
+  <a href="http://www.libgd.org/">http://www.libgd.org/</a>
+</div>
 <div class="author">Matthew Leverton</div>
 <div class="details">
   For his Allegro portal.
