Remove references to old-subversion repository in readme file.

--- a/README.html
+++ b/README.html
@@ -43,7 +43,7 @@
   <a style="margin-left:32px;" href="#compilation">Compilation</a><br/>
   <a style="margin-left:32px;" href="#installation">Installation</a><br/>
   <a style="margin-left:32px;" href="#uninstallation">Uninstallation</a><br/>
-  <a style="margin-left:32px;" href="#subversion">Subversion</a><br/>
+  <a style="margin-left:32px;" href="#sourcecode">Source Code</a><br/>
   <a href="#contact_information">Contact Information</a><br/>
   <a href="#license">License</a><br/>
   <a style="margin-left:32px;" href="#legal_issues">Legal Issues</a><br/>
@@ -191,22 +191,22 @@ data/</pre>
 <p>
   Run "make uninstall".
 </p>
-<a name="subversion"></a><h2>SUBVERSION</h2>
+<a name="sourcecode"></a><h2>SOURCE CODE</h2>
 <p>
-  If you downloaded as&euml;prite from the Subversion repository, after
+  If you downloaded as&euml;prite from Git repository, after
   updating I recommend you to do:
 </p>
 <p>
-  <pre>~/ase-trunk/$ make clean
-~/ase-trunk/$ ./fix.sh
-~/ase-trunk/$ make</pre>
+  <pre>~/aseprite-src/$ make clean
+~/aseprite-src/$ ./fix.sh
+~/aseprite-src/$ make</pre>
 </p>
 <p>
   Also, you can make dependencies of the files (if you are trying to
   hack the as&euml;prite source code):
 </p>
 <p>
-  <pre>~/ase-trunk/$ sh misc/deps.sh</pre>
+  <pre>~/aseprite-src/$ sh misc/deps.sh</pre>
 </p>
 
 <a name="contact_information"></a><h1>CONTACT INFORMATION</h1>
