Still "allegro sprite editor"

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"> 
 <head> 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/> 
-  <title>as&euml;prite | animated sprite editor</title> 
+  <title>as&euml;prite | allegro sprite editor</title> 
   <style text="text/css">
 	body { font-family:sans-serif; font-size:11pt; }
     a { text-decoration:none; }
@@ -26,7 +26,7 @@
 
 <div id="title">
   <span style="color:#f00">a</span><span style="color:#0a0">s</span><span style="color:#00f;font-size:18pt">&euml;</span><span style="color:#0a0">prite</span>
-  <span style="color:#aca">| animated sprite editor</span>
+  <span style="color:#aca">| allegro sprite editor</span>
 </div>
 <div id="subtitle">Copyright &copy; 2001-2010 David Capello</div>
 <div id="warning">
