ASE will be the name for the next release.

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"> 
 <head> 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/> 
-  <title>as&euml;prite | allegro sprite editor</title> 
+  <title>ASE | Allegro Sprite Editor</title> 
   <style text="text/css">
 	body { font-family:sans-serif; font-size:11pt; }
     a { text-decoration:none; }
@@ -25,8 +25,8 @@
 <div id="page">
 
 <div id="title">
-  <span style="color:#f00">a</span><span style="color:#0a0">s</span><span style="color:#00f;font-size:18pt">&euml;</span><span style="color:#0a0">prite</span>
-  <span style="color:#aca">| allegro sprite editor</span>
+  <span style="color:#f00">A</span><span style="color:#0a0">S</span><span style="color:#00f">E</span>
+  <span style="color:#aca">| Allegro Sprite Editor</span>
 </div>
 <div id="subtitle">Copyright &copy; 2001-2010 David Capello</div>
 <div id="warning">
@@ -53,14 +53,14 @@
 
 <a name="introduction"></a><h1>INTRODUCTION</h1>
 <p>
-  <b>as&euml;prite</b> is an open source program to create animated
+  <b>ASE</b> is an open source program to create animated
   sprites. Sprites are little images that can be used in your website
   or in a video game. You can draw characters with movement, intros,
   textures, patterns, backgrounds, logos, color palettes, isometric
   levels, etc.
 </p>
 <p>
-  What makes as&euml;prite different? It focuses on pixel editing, to do
+  What makes ASE different? It focuses on pixel editing, to do
   pixel-art. Indeed, it isn't a photo retouching tool or a vector
   graphics editor. Mainly it is a tool to create tiny animations
   pixel-by-pixel.
@@ -68,7 +68,7 @@
 
 <a name="features"></a><h1>FEATURES</h1>
 <p>
-  The biggest features of as&euml;prite are:
+  The biggest features of ASE are:
 </p>
 <p>
 <ul>
@@ -110,14 +110,14 @@
   In Windows 98/2K/XP/Vista the main configuration file is
   <em>aseprite.cfg</em> which is saved in the same folder of
   <em>aseprite.exe</em>
-  executable file (in this way as&euml;prite is a portable
+  executable file (in this way ASE is a portable
   application, i.e. you can transport a copy of the program
   in your USB drive).
 </p>
 <p>
   The following is a list of all configuration files that you could
   modify (it is not recommended to do so, but is useful if you want to
-  <em>super</em>-customize as&euml;prite):
+  <em>super</em>-customize ASE):
 <p>
 <p>
   <pre>aseprite.cfg          Program configuration
@@ -125,7 +125,7 @@ data/gui.xml          Menus, shortcuts, and tools
 data/convmatr.def     Convolutions matrices
 data/fonts/*.pcx      Fonts to be used in the GUI
 data/jids/*.jid       XML files with dialogs
-data/skins/*.*        as&euml;prite skins</pre>
+data/skins/*.*        ASE skins</pre>
 </p>
 <p>
   In GNU/Linux, the configuration file is ~/.asepriterc, and
@@ -141,7 +141,7 @@ data/</pre>
 <a name="developers"></a><h1>DEVELOPERS</h1>
 <a name="compilation"></a><h2>COMPILATION</h2>
 <p>
-  Before compile, you have to configure how to compile as&euml;prite, what
+  Before compile, you have to configure how to compile ASE, what
   libraries are available, release-debug-profile mode, etc.  You can
   run the "fix.sh" script, answer some questions and done: the main
   makefile is created, just do
@@ -172,12 +172,12 @@ data/</pre>
   <ol>
 	<li>
 	  <p>
-		Running as&euml;prite from its source directory.
+		Running ASE from its source directory.
 	  </p>
 	</li>
 	<li>
 	  <p>
-		Install as&euml;prite in the directory that you specified in the "fix.sh" question:
+		Install ASE in the directory that you specified in the "fix.sh" question:
 		"Where do you want install ASE by default?" (generally "/usr/local")
 		(in the "makefile.cfg", it's the DEFAULT_PREFIX variable)
 	  </p>
@@ -193,7 +193,7 @@ data/</pre>
 </p>
 <a name="sourcecode"></a><h2>SOURCE CODE</h2>
 <p>
-  If you downloaded as&euml;prite from Git repository, after
+  If you downloaded ASE from Git repository, after
   updating I recommend you to do:
 </p>
 <p>
@@ -203,7 +203,7 @@ data/</pre>
 </p>
 <p>
   Also, you can make dependencies of the files (if you are trying to
-  hack the as&euml;prite source code):
+  hack the ASE source code):
 </p>
 <p>
   <pre>~/aseprite-src/$ sh misc/deps.sh</pre>
@@ -248,7 +248,7 @@ data/</pre>
 <a name="legal_issues"></a><h2>LEGAL ISSUES</h2>
 <p>
   <ul>
-	<li>as&euml;prite is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a>.</li>
+	<li>ASE is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a>.</li>
 	<li>Jinete and Vaca are under <a href="http://www.opensource.org/licenses/bsd-license.php">BSD license</a>.</li>
 	<li>Allegro is giftware license (similar to <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a>).</li>
 	<li>ALFONT is under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
