Modified comments in README.html about aseprite.cfg (now it is aseprite.ini).

--- a/README.html
+++ b/README.html
@@ -109,7 +109,7 @@
 <a name="configuration_files"></a><h1>CONFIGURATION FILES</h1>
 <p>
   In Windows 98/2K/XP/Vista the main configuration file is
-  <em>aseprite.cfg</em> which is saved in the same folder of
+  <em>aseprite.ini</em> which is saved in the same folder of
   <em>aseprite.exe</em>
   executable file (in this way ASE is a portable
   application, i.e. you can transport a copy of the program
@@ -121,7 +121,7 @@
   <em>super</em>-customize ASE):
 <p>
 <p>
-  <pre>aseprite.cfg          Program configuration
+  <pre>aseprite.ini          Program configuration
 data/gui.xml          Menus, shortcuts, and tools
 data/convmatr.def     Convolutions matrices
 data/fonts/*.pcx      Fonts to be used in the GUI
