Renamed makefile.lnx to makefile.linux.

--- a/README.html
+++ b/README.html
@@ -155,7 +155,7 @@ data/</pre>
   uncomment the necessary options, and then run
 </p>
 <p>
-  <pre>makefile -f makefile.lnx</pre>
+  <pre>makefile -f makefile.linux</pre>
 </p>
 <p>
 
