Renamed makefile.mgw to makefile.mingw.

--- a/README.html
+++ b/README.html
@@ -162,7 +162,7 @@ data/</pre>
   For MinGW, edit the "makefile.cfg" file, and then
 </p>
 <p>
-  <pre>makefile -f makefile.mgw</pre>
+  <pre>makefile -f makefile.mingw</pre>
 </p>
 
 <a name="installation"></a><h2>INSTALLATION</h2>
