Do not center the mouse pointer when zoom (Paul Pridham idea).

--- a/README.html
+++ b/README.html
@@ -338,6 +338,7 @@ make</pre>
     Mateusz&nbsp;Czaplinski,
     Nathan&nbsp;"whitedoor"&nbsp;Smith,
     Nora&nbsp;Amendez,
+    Paul&nbsp;Pridham,
     Peter&nbsp;"tjaden"&nbsp;Wang,
     Philippe&nbsp;Michael&nbsp;Groarke,
     Robert&nbsp;"Bob"&nbsp;J&nbsp;Ohannessian,
