Remove DEFAULT_PREFIX variable (on Linux resources are searched in ../share now).

--- a/README.html
+++ b/README.html
@@ -128,7 +128,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 </p>
 <p>
   <pre>$HOME/.aseprite/
-/usr/local/share/aseprite/
+../share/aseprite/
 ./data/</pre>
 </p>
 
