Add accurate color quantization or use median cut if the sprite has more than 256 colors. + Implemented issue #3 - Accurate Sprite Quantize. + Remove Ben Davis code to quantize color palette (to avoid license problems).

--- a/README.html
+++ b/README.html
@@ -175,8 +175,6 @@ data/widgets/*.xml    XML files with dialogs</pre>
 	<li>Jinete and Vaca are under <a href="http://www.opensource.org/licenses/bsd-license.php">BSD license</a>.</li>
 	<li>Allegro is giftware license (similar to <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a>).</li>
 	<li>ALFONT is under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
-	<li>quantize.c is copyright by Ben Davis (you need his authorization to use his code in your own program).</li>
-	<li>quantize2.c is distributed under the <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a></li>
 	<li>Lua-5.0 is distributed under the <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a></li>
 	<li>GIMP is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a></li>
 	<li>GLib and GTK+ are distributed under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
@@ -239,8 +237,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 </p>
 <div class="author">&Aacute;lvaro Gonz&aacute;lez</div>
 <div class="details">
-  For the other routine to generate
-  optimized palettes (used in old versions of ASE).
+  For color quantization routines (used in old versions of ASE).
 </div>
 <div class="author">Angelo Mottola</div>
 <div class="details">
@@ -249,7 +246,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 </div>
 <div class="author">Ben Davis</div>
 <div class="details">
-  For his optimized palette generation routine.
+  For color quantization routines (used in old versions of ASE).
 </div>
 <div class="author">Billy Biggs and Lauris Kaplinski</div>
 <div class="details">
