Use giflib to load gif files. With this changes a lot of bugs loading different kind of .gif files are fixed. GIF files must be loaded as RGBA images to support background color and different transparent color per frame combinations.

--- a/README.html
+++ b/README.html
@@ -274,7 +274,8 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <div class="author">Elias Pschernig</div>
 <div class="details">
   For his excelent bresenham ellipse algorithm and to report some
-  nasty keyboard bugs. And his patch to load/save GIF files.
+  nasty keyboard bugs. And his patch to load/save GIF files (used
+  in old versions of ASE).
 </div>
 <div class="author">Elver Loho</div>
 <div class="details">
@@ -288,6 +289,10 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <div class="author">Gary Oberbrunner</div>
 <div class="details">
   For his code to quantize RGB images with ordered dither method.
+</div>
+<div class="author">Gershon Elber and Eric Raymond</div>
+<div class="details">
+  And everyone who contributed to giflib.
 </div>
 <div class="author">Javier Gonzalez</div>
 <div class="details">
