--- a/README.html
+++ b/README.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"> 
+<!DOCTYPE html>
 <head> 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/> 
-  <title>ASE | Allegro Sprite Editor</title> 
+  <title>ASEPRITE</title> 
   <style text="text/css">
 	body { font-family:sans-serif; font-size:11pt; }
     a { text-decoration:none; }
     a:hover { text-decoration:underline; }
 	#page { width:600px; margin-left:auto; margin-right:auto; }
-	#title { font-size:20pt; }
-	#subtitle { font-size:12pt; color:#aaa; }
+	#title { font-size:20pt; color:#51b6cf; }
+	#subtitle { font-size:12pt; color:#aaf; }
 	#warning { font-size:12pt; color:#f77; background-color:#fee; border:1px solid #f77; padding:8px; margin:8px auto; width:80%; }
 	#footer { font-size:10pt; color:#aaa; border-top:1px solid #aaa; }
 	h1 { font-size:14pt; font-weight:bold; color:#080; }
@@ -17,17 +17,15 @@
 	.author { margin-left:8px; }
 	.details { margin-left:16px; margin-bottom:8px; color:#aaa; }
 	.details a { display:block; }
-	.ideas { margin-left:16px; }
+	.library { margin:8px; background-color:#7ddbf3; border:4px solid #7ddbf3; border-radius:4px; }
+	.library-license { margin-left:16px; margin-bottom:8px; color:#aaa; display:none; }
     pre { background-color:#e0f0e0; padding:8px; margin-left:32px; }
   </style>
 </head>
 <body>
 <div id="page">
 
-<div id="title">
-  <span style="color:#f00">A</span><span style="color:#0a0">S</span><span style="color:#00f">E</span>
-  <span style="color:#aca">| Allegro Sprite Editor</span>
-</div>
+<div id="title">ASEPRITE</div>
 <div id="subtitle">Copyright &copy; 2001-2011 David Capello</div>
 <div id="warning">
   THIS PROGRAM IS DISTRIBUTED WITHOUT ANY WARRANTY<br/>
@@ -41,21 +39,19 @@
   <a href="#configuration_files">Configuration Files</a><br/>
   <a href="#contact_information">Contact Information</a><br/>
   <a href="#license">License</a><br/>
-  <a style="margin-left:32px;" href="#legal_issues">Legal Issues</a><br/>
   <a href="#authors">Authors</a><br/>
-  <a style="margin-left:32px;" href="#thankfulness">Thankfulness</a><br/>
 </p>
 
 <a name="introduction"></a><h1>INTRODUCTION</h1>
 <p>
-  <b>ASE</b> is an open source program to create animated
+  <b>ASEPRITE</b> is an open source program to create animated
   sprites. Sprites are little images that can be used in your website
   or in a video game. You can draw characters with movement, intros,
   textures, patterns, backgrounds, logos, color palettes, isometric
   levels, etc.
 </p>
 <p>
-  What makes ASE different? It focuses on pixel editing, to do
+  What makes ASEPRITE different? It focuses on pixel editing, to do
   pixel-art. Indeed, it isn't a photo retouching tool or a vector
   graphics editor. Mainly it is a tool to create tiny animations
   pixel-by-pixel.
@@ -63,7 +59,7 @@
 
 <a name="features"></a><h1>FEATURES</h1>
 <p>
-  The biggest features of ASE are:
+  The biggest features of ASEPRITE are:
 </p>
 <p>
 <ul>
@@ -105,20 +101,20 @@
   In Windows 98/2K/XP/Vista the main configuration file is
   <em>aseprite.ini</em> which is saved in the same folder of
   <em>aseprite.exe</em>
-  executable file (in this way ASE is a portable
+  executable file (in this way ASEPRITE is a portable
   application, i.e. you can transport a copy of the program
   in your USB drive).
 </p>
 <p>
   The following is a list of all configuration files that you could
   modify (it is not recommended to do so, but is useful if you want to
-  <em>super</em>-customize ASE):
+  <em>super</em>-customize ASEPRITE):
 <p>
 <p>
   <pre>aseprite.ini          Program configuration
 data/gui.xml          Menus, shortcuts, and tools
 data/convmatr.def     Convolutions matrices
-data/skins/*.*        ASE skins
+data/skins/*.*        ASEPRITE skins
 data/widgets/*.xml    XML files with dialogs</pre>
 </p>
 <p>
@@ -136,10 +132,9 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <p>We recommend you to use the SourceForge tracker to do specific reporting of issues:</p>
 <p>
 <ul>
-  <li><a href="http://sourceforge.net/tracker/?group_id=20848&atid=120848&func=add">Bugs</a></li>
-  <li><a href="http://sourceforge.net/tracker/?group_id=20848&atid=370848&func=add">Request features</a></li>
-  <li><a href="http://sourceforge.net/tracker/?group_id=20848&atid=320848&func=add">Patches</a></li>
-  <li><a href="http://sourceforge.net/tracker/?group_id=20848&atid=220848&func=add">Support request</a></li>
+  <li><a href="http://code.google.com/p/aseprite/issues/entry">Bugs</a></li>
+  <li><a href="http://code.google.com/p/aseprite/issues/entry?template=New%20feature">Request features</a></li>
+  <li><a href="http://groups.google.com/group/aseprite-discuss">ASEPRITE Group</a> (<a href="mailto:aseprite-discuss+subscribe@googlegroups.com">subscribe</a>)</li>
 </ul>
 </p>
 <p>
@@ -168,260 +163,113 @@ data/widgets/*.xml    XML files with dialogs</pre>
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
   USA
 <p>
-<a name="legal_issues"></a><h2>LEGAL ISSUES</h2>
-<p>
-  <ul>
-	<li>ASE is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a>.</li>
-	<li>Jinete and Vaca are under <a href="http://www.opensource.org/licenses/bsd-license.php">BSD license</a>.</li>
-	<li>Allegro is giftware license (similar to <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a>).</li>
-	<li>ALFONT is under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
-	<li>Lua-5.0 is distributed under the <a href="http://www.opensource.org/licenses/mit-license.html">MIT license</a></li>
-	<li>GIMP is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a></li>
-	<li>GLib and GTK+ are distributed under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
-	<li>GFLI-1.3 is distributed under <a href="http://www.opensource.org/licenses/gpl-2.0.php">GPL license</a>.</li>
-	<li>Libart 2.3.3 is distributed under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
-	<li>Libintl is distributed under <a href="http://www.opensource.org/licenses/lgpl-2.1.php">LGPL license</a>.</li>
-	<li>The FreeType Project is distributed under <a href="http://freetype.sourceforge.net/FTL.TXT">FTL license</a>.</li>
-	<li>zlib & Libpng are under the <a href="http://www.opensource.org/licenses/zlib-license.php">ZLIB license</a>.</li>
-  </ul>
-</p>
 
 <a name="authors"></a><h1>AUTHORS</h1>
 <div class="author">David Capello &lt;<a href="mailto:davidcapello@gmail.com">davidcapello@gmail.com</a>&gt;</div>
 <div class="details">Programmer, designer, and maintainer.</div>
 <div class="author">Ilija Melentijevic</div>
 <div class="details">
-  New GUI skin (from ASE 0.8). A lot of good ideas for ASE 0.8.
+  New GUI skin (from ASEPRITE 0.8). A lot of good ideas.
   <a href="http://ilkke.blogspot.com/">http://ilkke.blogspot.com/</a>
   <a href="http://www.pixeljoint.com/p/9270.htm">http://www.pixeljoint.com/p/9270.htm</a>
 </div>
 <div class="author">Trent Gamblin</div>
 <div class="details">Mac OS X packager.</div>
 <p>
-  Thanks for ideas, patches, bugs report and contributions to:
+  Thanks to all the people which have contributed ideas, patches, bugs
+  report, feature requests, donations, and help me developing ASEPRITE.
 </p>
-<div class="ideas">
-  Alex&nbsp;Winter,
-    &Aacute;lvaro&nbsp;"Kronoman&nbsp;X"&nbsp;Gonz&aacute;lez,
-    Angelo&nbsp;Mottola,
-    Ben&nbsp;"entheh"&nbsp;Davis,
-    Carl&nbsp;Olsson,
-    Christer&nbsp;Sandberg,
-    Clayton&nbsp;Enga,
-    David&nbsp;Campo,
-    Elias&nbsp;"networm"&nbsp;Pschernig,
-    Elio&nbsp;Cuevas&nbsp;G&oacute;mez,
-    Emmanuel&nbsp;"God_Cells"&nbsp;Rousseau,
-    Hern&aacute;n&nbsp;Echegoyemberry,
-    Ilija&nbsp;"iLKke"&nbsp;Melentijevic,
-    Jon&nbsp;"kazzmir"&nbsp;Rafkind,
-    Jonathan&nbsp;Taylor,
-    Jorge&nbsp;Ram&iacute;rez&nbsp;Flores,
-    Juraj&nbsp;Michalek,
-    Manuel&nbsp;De&nbsp;Miguel&nbsp;Moreno,
-    Manuel&nbsp;"manuq"&nbsp;Qui&ntilde;ones,
-    Mateusz&nbsp;Czaplinski,
-    Nathan&nbsp;"whitedoor"&nbsp;Smith,
-    Nora&nbsp;Amendez,
-    Paul&nbsp;Pridham,
-    Peter&nbsp;"tjaden"&nbsp;Wang,
-    Philippe&nbsp;Michael&nbsp;Groarke,
-    Robert&nbsp;"Bob"&nbsp;J&nbsp;Ohannessian,
-    Scott&nbsp;Wilson,
-    Trent&nbsp;"trentg"&nbsp;Gamblin.
-</div>
-<a name="thankfulness"></a><h2>THANKFULNESS</h2>
+<a name="thankfulness"></a><h2>CREDITS</h2>
 <p>
-  Some people didn't contribute to the project in a direct way,
-  but their work was indispensable to make it real:
+  ASEPRITE uses libraries or parts of the original source code
+  of the following projects created by third-parties:
 </p>
-<div class="author">&Aacute;lvaro Gonz&aacute;lez</div>
-<div class="details">
-  For color quantization routines (used in old versions of ASE).
+<div class="library">
+  Allegro 4
+  | <a href="http://alleg.sourceforge.net/">homepage</a>
+  | <a href="docs/licenses/allegro4-LICENSE.txt">license</a>
 </div>
-<div class="author">Angelo Mottola</div>
-<div class="details">
-  For the routines to load/save JPEG files with JPGalleg
-  (alternative use instead of libjpeg).
+<div class="library">
+  FreeType
+  | <a href="http://www.freetype.org/">homepage</a>
+  | <a href="docs/licenses/FTL.txt">license</a>
 </div>
-<div class="author">Ben Davis</div>
-<div class="details">
-  For color quantization routines (used in old versions of ASE).
+<div class="library">
+  giflib
+  | <a href="http://sourceforge.net/projects/giflib/">homepage</a>
+  | <a href="docs/licenses/giflib-LICENSE.txt">license</a>
 </div>
-<div class="author">Billy Biggs and Lauris Kaplinski</div>
-<div class="details">
-  For the help with the alpha blending routines.
+<div class="library">
+  GIMP
+  | <a href="http://www.gimp.org/">homepage</a>
+  | <a href="docs/licenses/GPL.txt">license</a>
 </div>
-<div class="author">Csaba Biegl</div>
-<div class="details">
-  For his ellipse routine in the GRX library (used in old versions
-  of ASE).
+<div class="library">
+  GTK+
+  | <a href="http://www.gtk.org/">homepage</a>
+  | <a href="docs/licenses/LGPL-2.1.txt">license</a>
 </div>
-<div class="author">David Turner, Robert Wilhelm, and Werner Lemberg</div>
-<div class="details">
-  For the FreeType project.
-  <a href="http://www.freetype.org/">http://www.freetype.org/</a>
+<div class="library">
+  Google Test
+  | <a href="http://code.google.com/p/googletest/">homepage</a>
+  | <a href="docs/licenses/gtest-LICENSE.txt">license</a>
 </div>
-<div class="author">Derek Liauw Kie Fa and Robert J Ohannessian</div>
-<div class="details">
-  for 2xSaI.
+<div class="library">
+  libart
+  | <a href="http://www.levien.com/libart/">homepage</a>
+  | <a href="docs/licenses/LGPL-2.0.txt">license</a>
 </div>
-<div class="author">DJ Delorie</div>
-<div class="details">
-  For the DJGPP port to DOS of the GNU software.
-  <a href="http://www.delorie.com/djgpp/">http://www.delorie.com/djgpp/</a>
+<div class="library">
+  libgd
+  | <a href="http://www.libgd.org/">homepage</a>
+  | <a href="">license</a>
 </div>
-<div class="author">Elias Pschernig</div>
-<div class="details">
-  For his excelent bresenham ellipse algorithm and to report some
-  nasty keyboard bugs. And his patch to load/save GIF files (used
-  in old versions of ASE).
+<div class="library">
+  libjpeg
+  | <a href="http://www.ijg.org/">homepage</a>
+  | <a href="docs/license/libjpeg-LICENSE.txt">license</a>
 </div>
-<div class="author">Elver Loho</div>
-<div class="details">
-  For port ASE to BeOS.
+<div class="library">
+  libpng
+  | <a href="http://www.libpng.org/pub/png/">homepage</a>
+  | <a href="docs/licenses/libpng-LICENSE.txt">license</a>
 </div>
-<div class="author">Frank J. T. Wojcik, Guy Eric Schalnat, Andreas Dilger, Glenn
-  Randers-Pehrson</div>
-<div class="details">
-  For libpng.
+<div class="library">
+  loadpng
+  | <a href="">homepage</a>
+  | <a href="">license</a>
 </div>
+<div class="library">
+  tinyxml
+  | <a href="http://www.sourceforge.net/projects/tinyxml">homepage</a>
+  | <a href="docs/licenses/ZLIB.txt">license</a>
+</div>
+<div class="library">
+  XFree86
+  | <a href="http://www.x.org/">homepage</a>
+  | <a href="">license</a>
+</div>
+<div class="library">
+  zlib
+  | <a href="http://www.gzip.org/zlib/">homepage</a>
+  | <a href="docs/licenses/ZLIB.txt">license</a>
+</div>
+
+<div style="margin:16px 0px;">
+Other parts of code by:
+</div>
+
 <div class="author">Gary Oberbrunner</div>
 <div class="details">
-  For his code to quantize RGB images with ordered dither method.
+  Code to quantize RGB images with ordered dither method.
 </div>
-<div class="author">Gershon Elber and Eric Raymond</div>
-<div class="details">
-  And everyone who contributed to giflib.
-</div>
+
 <div class="author">Javier Gonzalez</div>
 <div class="details">
-  For his AllegroFont wrapper.
-</div>
-<div class="author">Jean-loup Gailly and Mark Adler</div>
-<div class="details">
-  For zlib
-</div>
-<div class="author">Jens Ch. Restemeier</div>
-<div class="details">
-  For GFLI, his code to save FLI files is just "amazing".
-</div>
-<div class="author">Jerry Coffin and HenkJan Wolthuis</div>
-<div class="details">
-  For the hash table routines.
-</div>
-<div class="author">Johan Halmén and Anders "Trezker" Andersson</div>
-<div class="details">
-  for mapgen (included in old ASE versions).
-  <a href="http://edu.loviisa.fi/~lg/jh/mapgen/">http://edu.loviisa.fi/~lg/jh/mapgen/</a>
-  <a href="http://www.angelfire.com/art/dumlesoft/Projects.html">http://www.angelfire.com/art/dumlesoft/Projects.html</a>
-</div>
-<div class="author">Jordan Russell and Martijn Laan</div>
-<div class="details">
-  For Inno Setup.
-  <a href="http://www.innosetup.com/">http://www.innosetup.com/</a>
-</div>
-<div class="author">Jose Luis Torres Pantoja</div>
-<div class="details">
-  For his gift, the book "Digital Image Processing, Gonzalez and
-  Woods, Addison-Wesley, 2002"
-</div>
-<div class="author">Juraj Michalek</div>
-<div class="details">
-  For the support to ASE in his portal.
-  <a href="http://games.linux.sk/">http://games.linux.sk/</a>
-</div>
-<div class="author">Lee Thomason</div>
-<div class="details">
-  For tinyxml library.
-  <a href="http://www.sourceforge.net/projects/tinyxml">http://www.sourceforge.net/projects/tinyxml</a>
-</div>
-<div class="author">Matthieu Haller and Kirsten Schulz</div>
-<div class="details">
-  For filled polygon algorithm of GD library.
-  <a href="http://www.libgd.org/">http://www.libgd.org/</a>
-</div>
-<div class="author">Matthew Leverton</div>
-<div class="details">
-  For his Allegro portal.
-  <a href="http://www.allegro.cc/">http://www.allegro.cc/</a>
-</div>
-<div class="author">Max Maischein</div>
-<div class="details">
-  For the documents about various file formats of the Animator and
-  Animator Pro.
-</div>
-<div class="author">Mike Haaland</div>
-<div class="details">
-  For his documentation about the FLI/FLC, COL, PIC, and MSK files
-  format.
-</div>
-<div class="author">Paúl Andrés "Ceniza" Jiménez</div>
-<div class="details">
-  For his help in the translation of FULL-SCREEN.txt document.
-</div>
-<div class="author">Peter Wang</div>
-<div class="details">
-  For his Red Pixel II game, it was very helpful for the scripting
-  routines. Also for loadpng library.
-  <a href="http://redpixel.sourceforge.net/">http://redpixel.sourceforge.net/</a>
-  <a href="http://tjaden.strangesoft.net/">http://tjaden.strangesoft.net/</a>
-</div>
-<div class="author">Raph Levien</div>
-<div class="details">
-  For his excelent work with the libart library.
-  <a href="http://www.levien.com/divbart/">http://www.levien.com/divbart/</a>
-</div>
-<div class="author">Richard M. Stallman</div>
-<div class="details">
-  For the Free Software Foundation, GNU and Emacs, and everyone
-  who contributed with free software.
-  <a href="http://www.fsf.org/">http://www.fsf.org/</a>
-  <a href="http://www.gnu.org/">http://www.gnu.org/</a>
-  <a href="http://www.emacs.org/">http://www.emacs.org/</a>
-</div>
-<div class="author">Robert Höhne</div>
-<div class="details">
-  For the RHIDE enviroment.
-  <a href="http://www.lanet.lv/~pavenis/rhide.html">http://www.lanet.lv/~pavenis/rhide.html</a>
-</div>
-<div class="author">Salvador Eduardo Tropea</div>
-<div class="details">
-  For the SETEdit editor (although I don't use it anymore, the
-  first months in Linux without it would have been impossibles)
-  <a href="http://setedit.sourceforge.net/">http://setedit.sourceforge.net/</a>
-</div>
-<div class="author">Shawn Hargreaves</div>
-<div class="details">
-  And hundreds of people who helped in the Allegro library.
-  <a href="http://alleg.sourceforge.net/">http://alleg.sourceforge.net/</a>
-</div>
-<div class="author">Spencer Kimball and Peter Mattis</div>
-<div class="details">
-  And a lot of people who contributed with The GIMP and GTK+.  I
-  personally "borrow" source code for differents task in the
-  program.
-  <a href="http://www.gimp.org/">http://www.gimp.org/</a>
-  <a href="http://www.gtk.org/">http://www.gtk.org/</a>
-</div>
-<div class="author">The Independent JPEG Group</div>
-<div class="details">
-  For the JPEG library to load/save Jpeg files.
-  <a href="ftp://ftp.uu.net/graphics/jpeg/">ftp://ftp.uu.net/graphics/jpeg/</a>
-</div>
-<div class="author">The Open Group</div>
-<div class="details">
-  For XFree86.
-  <a href="http://www.x.org/">http://www.x.org/</a>
-</div>
-<div class="author">Waldemar Celes, Roberto Ierusalimschy, and Luiz Henrique de Figueiredo</div>
-<div class="details">
-  For their excelent work with Lua.
-  <a href="http://www.lua.org/">http://www.lua.org/</a>
+  AllegroFont wrapper.
 </div>
 
 <div id="footer">Copyright &copy; 2001-2011 David Capello</div>
 </div>
 </body> 
 </html>
-
