Remove docs/manual/ directory.

--- a/README.html
+++ b/README.html
@@ -166,7 +166,10 @@ data/widgets/*.xml    XML files with dialogs</pre>
 
 <a name="authors"></a><h1>AUTHORS</h1>
 <div class="author">David Capello &lt;<a href="mailto:davidcapello@gmail.com">davidcapello@gmail.com</a>&gt;</div>
-<div class="details">Programmer, designer, and maintainer.</div>
+<div class="details">
+  Programmer, designer, and maintainer.
+  <a href="http://dacap.com.ar/">http://dacap.com.ar/</a>
+</div>
 <div class="author">Ilija Melentijevic</div>
 <div class="details">
   New GUI skin (from ASEPRITE 0.8). A lot of good ideas.
@@ -176,8 +179,9 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <div class="author">Trent Gamblin</div>
 <div class="details">Mac OS X packager.</div>
 <p>
-  Thanks to all the people which have contributed ideas, patches, bugs
-  report, feature requests, donations, and help me developing ASEPRITE.
+  Thanks to all the people who have contributed ideas, patches, bugs
+  report, feature requests, donations, and help me developing
+  ASEPRITE.
 </p>
 <a name="thankfulness"></a><h2>CREDITS</h2>
 <p>
