Minor changes in README.html and added curl and xfree86 licenses.

--- a/README.html
+++ b/README.html
@@ -158,7 +158,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
   General Public License for more details.
 </p>
 <p>
-  You should have received a copy of the GNU General Public License
+  You should have received a copy of the <a href="docs/licenses/GPL.txt">GNU General Public License</a>
   along with this program; if not, write to the Free Software
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
   USA
@@ -194,6 +194,11 @@ data/widgets/*.xml    XML files with dialogs</pre>
   | <a href="docs/licenses/allegro4-LICENSE.txt">license</a>
 </div>
 <div class="library">
+  curl
+  | <a href="http://curl.haxx.se/">homepage</a>
+  | <a href="docs/licenses/curl-LICENSE.txt">license</a>
+</div>
+<div class="library">
   FreeType
   | <a href="http://www.freetype.org/">homepage</a>
   | <a href="docs/licenses/FTL.txt">license</a>
@@ -224,14 +229,9 @@ data/widgets/*.xml    XML files with dialogs</pre>
   | <a href="docs/licenses/LGPL-2.0.txt">license</a>
 </div>
 <div class="library">
-  libgd
-  | <a href="http://www.libgd.org/">homepage</a>
-  | <a href="">license</a>
-</div>
-<div class="library">
   libjpeg
   | <a href="http://www.ijg.org/">homepage</a>
-  | <a href="docs/license/libjpeg-LICENSE.txt">license</a>
+  | <a href="docs/licenses/libjpeg-LICENSE.txt">license</a>
 </div>
 <div class="library">
   libpng
@@ -240,8 +240,8 @@ data/widgets/*.xml    XML files with dialogs</pre>
 </div>
 <div class="library">
   loadpng
-  | <a href="">homepage</a>
-  | <a href="">license</a>
+  | <a href="http://tjaden.strangesoft.net/loadpng/">homepage</a>
+  | <a href="http://en.wikipedia.org/wiki/Public_domain">license</a>
 </div>
 <div class="library">
   tinyxml
@@ -251,7 +251,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <div class="library">
   XFree86
   | <a href="http://www.x.org/">homepage</a>
-  | <a href="">license</a>
+  | <a href="docs/licenses/XFree86-LICENSE.txt">license</a>
 </div>
 <div class="library">
   zlib
