Remove reference to SourceForge in README.html.

--- a/README.html
+++ b/README.html
@@ -129,7 +129,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 </p>
 
 <a name="contact_information"></a><h1>CONTACT INFORMATION</h1>
-<p>We recommend you to use the SourceForge tracker to do specific reporting of issues:</p>
+<p>You can report problems (bugs) or features in the Google Code project:</p>
 <p>
 <ul>
   <li><a href="http://code.google.com/p/aseprite/issues/entry">Bugs</a></li>
