Some changes to FEATURES section in README.html.

--- a/README.html
+++ b/README.html
@@ -59,17 +59,15 @@
 
 <a name="features"></a><h1>FEATURES</h1>
 <p>
-  The biggest features of ASEPRITE are:
+  The main features of ASEPRITE are:
 </p>
 <p>
 <ul>
   <li>
-	Sprites are composed by <b>layers and frames</b>. These two concept are separated.
-	You have layers in one side and frames on the other side. You can imagine this as a
-	matrix, where each row is a layer and each column is a frame.
+	Sprites are composed by <b>layers</b> &amp; <b>frames</b>.
   </li>
   <li>
-	Supported color modes: <b>RGBA</b>, Grayscale and <b>Indexed images</b> (palettes up to 256 colors).
+	Supported color modes: <b>RGBA</b>, <b>Indexed</b> (palettes up to 256 colors), and Grayscale.
   </li>
   <li>
 	Supported image formats (load/save): <b>PNG</b>, <b>GIF</b>, JPG, FLC, FLI, BMP, PCX, TGA, and ASE (special format).
@@ -78,17 +76,20 @@
 	Load and save animations in a <b>sequence of bitmaps</b> (e.g. frame1.png, frame2.png, etc.).
   </li>
   <li>
-	Tiled drawing mode, useful to draw patterns and textures.
+	<b>Tiled</b> drawing mode, useful to draw <b>patterns</b> and textures.
   </li>
   <li>
 	<b>Undo/Redo</b> for every operation.
   </li>
   <li>
-	Special tools like Blur, Jumble, Convolution Matrices.
-  </li>
-  <li>
 	<b>Multiple editors</b> support. You can split an editor horizontally or vertically multiple times
 	to edit and view the same sprite with different zooms, or different sprites.
+  </li>
+  <li>
+	Import/Export <b>Sprite Sheets</b>.
+  </li>
+  <li>
+	Pixel art specific tools like filled <b>Contour</b> &amp; <b>Polygon</b>.
   </li>
   <li>
 	<b>Onion skinning</b>.
