Remove Windows 98/2K from CONFIGURATION FILES section in README.html.

--- a/README.html
+++ b/README.html
@@ -99,7 +99,7 @@
 
 <a name="configuration_files"></a><h1>CONFIGURATION FILES</h1>
 <p>
-  In Windows 98/2K/XP/Vista the main configuration file is
+  In Windows XP/Vista/7 the main configuration file is
   <em>aseprite.ini</em> which is saved in the same folder of
   <em>aseprite.exe</em>
   executable file (in this way ASEPRITE is a portable
