Change README.html to show a link to contributors page.

--- a/README.html
+++ b/README.html
@@ -177,8 +177,10 @@ data/widgets/*.xml    XML files with dialogs</pre>
   <a href="http://ilkke.blogspot.com/">http://ilkke.blogspot.com/</a>
   <a href="http://www.pixeljoint.com/p/9270.htm">http://www.pixeljoint.com/p/9270.htm</a>
 </div>
-<div class="author">Trent Gamblin</div>
-<div class="details">Mac OS X packager.</div>
+<div class="author">Contributors</div>
+<div class="details">
+  <a href="http://code.google.com/p/aseprite/people/list">http://code.google.com/p/aseprite/people/list</a>
+</div>
 <p>
   Thanks to all the people who have contributed ideas, patches, bugs
   report, feature requests, donations, and help me developing
