--- a/README.html
+++ b/README.html
@@ -197,6 +197,11 @@ data/widgets/*.xml    XML files with dialogs</pre>
   | <a href="docs/licenses/allegro4-LICENSE.txt">license</a>
 </div>
 <div class="library">
+  AllegroFont
+  | <a href="http://chernsha.sitesled.com/">homepage</a>
+  | <a href="docs/licenses/FTL.txt">license</a>
+</div>
+<div class="library">
   curl
   | <a href="http://curl.haxx.se/">homepage</a>
   | <a href="docs/licenses/curl-LICENSE.txt">license</a>
@@ -269,11 +274,6 @@ Other parts of code by:
 <div class="author">Gary Oberbrunner</div>
 <div class="details">
   Code to quantize RGB images with ordered dither method.
-</div>
-
-<div class="author">Javier Gonzalez</div>
-<div class="details">
-  AllegroFont wrapper.
 </div>
 
 <div id="footer">Copyright &copy; 2001-2012 David Capello</div>
