Update loadpng code from its latest version from Allegro SVN repository (new license: zlib).

--- a/README.html
+++ b/README.html
@@ -249,7 +249,7 @@ data/widgets/*.xml    XML files with dialogs</pre>
 <div class="library">
   loadpng
   | <a href="http://tjaden.strangesoft.net/loadpng/">homepage</a>
-  | <a href="http://en.wikipedia.org/wiki/Public_domain">license</a>
+  | <a href="docs/licenses/ZLIB.txt">license</a>
 </div>
 <div class="library">
   tinyxml
